complete encrypt challenge

--- a/Act03_EncryptChallenge/index.html
+++ b/Act03_EncryptChallenge/index.html
@@ -18,17 +18,11 @@
             </textarea>
         </div>
         <div class="buttonControls">
-            <button type="button" class="buttonControl" id="encryptButton">Encrypt</button>
-            <button type="button" class="buttonControl" id="decryptButton">Decrypt</button>
+            <button onclick="Encrypt();" type="button" class="buttonControl" id="encryptButton">Encrypt</button>
+            <button onclick="Decrypt();" type="button" class="buttonControl" id="decryptButton">Decrypt</button>
         </div>
     
-
     </div>
-
-
-    
-
-
 
     <script src="app.js"></script>
 
